# SlicerCL

./: README
Experiments/: slicercl.py  slicercl.sh
GooCutCL/: CMakeLists.txt  GooCut.py  GooCutCL.py
GrowCutCL/: CMakeLists.txt  GrowCutCL.cl.in  GrowCutCL.py
RenderCL/: CMakeLists.txt  Render.cl.in  RenderCL.py
